<resources>
    <string name="app_name">AndroidNOA</string>
    <string name="tvTitle">This is the list</string>
    <string name="btnLogout">Logout</string>
    <string name="btnSettings">Settings</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="etAddPesron">Enter username of the person you want to add</string>
    <string name="btnAdd">ADD</string>
    <string name="btnRegister">Register</string>
    <string name="btnShowAllUsers">Show All Users</string>
    <string name="BaseURL">http://10.0.2.2:8080/api/</string>
    <string name="tvUser">User:</string>
    <string name="etEnterUser">Enter your username</string>
    <string name="etTypeMessage">Type a message...</string>
    <string name="tvSettings">Settings</string>
    <string name="tvTheme">Theme:</string>
    <string name="tvServerConf">Server Configuration</string>
    <string name="tvServerIP">Server IP Address</string>
    <string name="etEnterIP">Enter server IP address</string>
    <string name="btnSaveSettings">Save settings</string>
    <string name="btnLight">Light</string>
    <string name="btnDark">Dark</string>
    <string name="etEnterServer">Enter server IP address</string>
</resources>