<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtry1"
    tools:context=".activities.SettingsActivity">

    <!-- Settings Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSettings"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Theme Selection -->
    <TextView
        android:id="@+id/themeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTheme"
        android:textSize="18sp"
        android:background="@color/etBackground"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"/>

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/themeTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:paddingStart="16dp">

        <Button
            android:id="@+id/lightThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:backgroundTint="@color/Secondary"
            android:checked="true"
            android:text="Light" />

        <Button
            android:id="@+id/darkThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Secondary"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:text="Dark" />

    </RadioGroup>

    <!-- Server Configuration -->
    <TextView
        android:id="@+id/serverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvServerConf"
        android:textSize="18sp"
        android:background="@color/etBackground"
        app:layout_constraintTop_toBottomOf="@+id/themeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"/>

    <!-- Server IP Address -->

    <TextView
        android:id="@+id/serverIpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:background="@color/etBackground"
        android:text="@string/tvServerIP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverTextView" />

    <EditText
        android:id="@+id/serverIpEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/etBackground"
        app:layout_constraintTop_toTopOf="@+id/serverIpTextView"
        app:layout_constraintStart_toEndOf="@+id/serverIpTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/etEnterIP"/>

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/btnSaveSettings"
        android:backgroundTint="@color/Secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverIpEditText"
        app:layout_constraintVertical_bias="0.19" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:padding="16dp"
        android:text="Logout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.79" />

</androidx.constraintlayout.widget.ConstraintLayout>
