<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    tools:context=".activities.SettingsActivity">

    <!-- Settings Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSettings"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Theme Selection -->
    <TextView
        android:id="@+id/themeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTheme"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:padding="5dp"
        android:background="@color/etBackground"
        android:textColor="@color/fontColor"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:paddingStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/themeTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <Button
            android:id="@+id/lightThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:backgroundTint="@color/Secondary"
            android:checked="true"
            android:text="Light"
            android:textColor="@color/fontColor" />

        <Button
            android:id="@+id/darkThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:backgroundTint="@color/Secondary"
            android:text="Dark"
            android:textColor="@color/fontColor" />

    </RadioGroup>



    <!-- Server IP Address -->
    <TextView
        android:id="@+id/serverIpTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/etBackground"
        android:padding="10dp"
        android:text="@string/tvServerIP"
        android:textColor="@color/fontColor"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeRadioGroup" />

    <EditText
        android:id="@+id/serverIpEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/etBackground"
        android:hint="@string/etEnterIP"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serverIpTextView"
        app:layout_constraintTop_toBottomOf="@+id/themeRadioGroup" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/btnSaveSettings"
        android:backgroundTint="@color/Secondary"
        android:textColor="@color/fontColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverIpEditText"
        app:layout_constraintVertical_bias="0.19" />


</androidx.constraintlayout.widget.ConstraintLayout>
