<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/chatContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Registration"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"/>

        <!-- User layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/etBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:text="@string/tvUser"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/etEnterUser"
                android:inputType="text" />

        </LinearLayout>

        <!-- Password layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/etBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fontColor"
                android:text="@string/password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

        </LinearLayout>
        <!-- Display Name layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/etBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Display Name:"
                android:textColor="@color/fontColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your display name" />

        </LinearLayout>

        <!-- Picture layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewPicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/buttonAddPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textColor="@color/fontColor"
                android:backgroundTint="@color/Secondary"
                android:text="Add Picture" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/Primary"
            android:text="Register"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAlreadyHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/Primary"
            android:text="I Already have an account"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/noa_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
